# deepcharacters

./: LICENSE  README.md  enviroment.yml
CudaRenderer/: README.md
CudaRenderer/cpp/cmakeTF2Linux/: CMakeLists.txt  submitBuild.sh
CudaRenderer/cpp/cmakeTF2Windows/: createBuildWin64.bat
CudaRenderer/cpp/src/Renderer/: CUDABasedRasterization.cpp  CUDABasedRasterization.cu  CUDABasedRasterization.h  CUDABasedRasterizationGrad.cpp  CUDABasedRasterizationGrad.cu  CUDABasedRasterizationGrad.h  CUDABasedRasterizationGradInput.h  cuda_raster_in.cpp
CudaRenderer/cpp/src/Utils/: CameraUtil.h  IndexHelper.h  RendererUtil.h  StringProcessing.cpp  StringProcessing.h  cudaUtil.h  cuda_SimpleMatrixUtil.h  float2x2.h  float3x2.h  float3x3.h  float3x4.h
CustomTensorFlowCPPOperators/: README.md
CustomTensorFlowCPPOperators/cmakeTF2Linux/: CMakeLists.txt  createBuildLinux.sh  submitCompile.sh
CustomTensorFlowCPPOperators/src/CudaUtils/: ARAPRotationHelper.h  CameraUtil.h  DQHelper.h  EmbeddedGraphRotationHelper.h  SolverUtil.h  cuda_SimpleMatrixUtil.h  float2x3.h  float4x4.h
CustomTensorFlowCPPOperators/src/CustomCPUOperators/ForwardKinematicsOperator/: ForwardKinematicsCPUOp.cpp  ForwardKinematicsCPUOp.h  ForwardKinematicsCPUOpData.h  ForwardKinematicsCPUOpGrad.cpp  ForwardKinematicsCPUOpGrad.h  ForwardKinematicsCPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomCPUOperators/Pose2EmbeddedGraphOperator/: Pose2EmbeddedGraphCPUOp.cpp  Pose2EmbeddedGraphCPUOp.h  Pose2EmbeddedGraphCPUOpData.h  Pose2EmbeddedGraphCPUOpGrad.cpp  Pose2EmbeddedGraphCPUOpGrad.h  Pose2EmbeddedGraphCPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomGPUOperators/CameraProjectionOperator/: CameraProjectionGPUOp.cpp  CameraProjectionGPUOp.cu  CameraProjectionGPUOp.h  CameraProjectionGPUOpData.h  CameraProjectionGPUOpGrad.cpp  CameraProjectionGPUOpGrad.cu  CameraProjectionGPUOpGrad.h  CameraProjectionGPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomGPUOperators/DQSkinningOperator/: DQSkinningGPUOp.cpp  DQSkinningGPUOp.cu  DQSkinningGPUOp.h  DQSkinningGPUOpData.h  DQSkinningGPUOpGrad.cpp  DQSkinningGPUOpGrad.cu  DQSkinningGPUOpGrad.h  DQSkinningGPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomGPUOperators/EmbeddedGraphARAPOperator/: EmbeddedGraphArapGPUOp.cpp  EmbeddedGraphArapGPUOp.cu  EmbeddedGraphArapGPUOp.h  EmbeddedGraphArapGPUOpData.h  EmbeddedGraphArapGPUOpGrad.cpp  EmbeddedGraphArapGPUOpGrad.cu  EmbeddedGraphArapGPUOpGrad.h  EmbeddedGraphArapGPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomGPUOperators/EmbeddedGraphOperator/: EmbeddedGraphGPUOp.cpp  EmbeddedGraphGPUOp.cu  EmbeddedGraphGPUOp.h  EmbeddedGraphGPUOpData.h  EmbeddedGraphGPUOpGrad.cpp  EmbeddedGraphGPUOpGrad.cu  EmbeddedGraphGPUOpGrad.h  EmbeddedGraphGPUOpGradData.h
CustomTensorFlowCPPOperators/src/CustomGPUOperators/GlobalToUVSpaceOperator/: GlobalToUVSpaceGPUOp.cpp  (+3 more)
CustomTensorFlowCPPOperators/src/Lock/: GlobalLock.cpp  GlobalLock.h
CustomTensorFlowCPPOperators/src/Math/: MathConstants.h
CustomTensorFlowCPPOperators/src/Rendering/: BasicRendering.cpp  BasicRendering.h
CustomTensorFlowCPPOperators/src/StringProcessing/: StringProcessing.h
Projects/: README.md
Projects/AdditionalUtils/: CSVHelper.py  CameraExtrinsicsReader.py  CameraReader.py  CheckGPU.py  CheckPlatform.py  ColorMap.py  CreateMeshTensor.py  FileChecker.py  ImageHelper.py  OBJReader.py  ObjTools.py  PrintFormat.py  SkeletonReader.py  SlurmTimeLimitConverter.py  TFDataFeatures.py  create_frames.py  create_seg_masks.py  process_mesh_sq_to_pc.py  submit_bash_data_gen2.sh
Projects/Architectures/: EDSRNet.py  ResNet50.py  SNet.py  SNetU.py  UNet.py  UNetLite.py
Projects/Architectures/srmodels/: __init__.py  edsr.py  srgan.py  wdsr.py
Projects/CudaRenderer/: CudaRendererGPU.py
Projects/CudaRenderer/data/: test_SH_tensor.py  test_mesh_tensor.py
Projects/CustomTFOperators/: CameraProjectionGPU.py  CppPath.py  EmbeddedGraphGpu.py  GaussianSmoothingGpu.py  GlobalToUVSpaceGpu.py  ImageReader.py  Pose2EmbeddedGraphCpu.py
Projects/GenerateTextures/: TextureMappingTF.py  generate_textures_fast.sh  texture_mapping_optimized_general.py
Projects/GenerateTextures/Settings/: SettingsTMap.py
Projects/HoloportedCharacters/: Bash.py  BashCreateTFRecordDataset.py  HPCMeshDL.py  slurmSetup.sh  submitBash.sh
Projects/HoloportedCharacters/Utils/: ArgParser.py  CreateTFRecordDataset.py  LoadTFRecordDatasetHResMesh.py  OutputWriter.py  Settings.py  Summary.py  WeightsLoader.py
Projects/HoloportedCharacters/testing_scripts/: config.ini  fixed_camera_config.ini  test_data_loader_spiral_more_start_end.py
(+66 files in other folders)
